arabic locale PART2

--- a/Controller/src/main/resources/messages_ar.properties
+++ b/Controller/src/main/resources/messages_ar.properties
@@ -264,16 +264,239 @@ myorders.edit=تعديل
 myorders.editfailed=خطا في تعديل الطلب!
 myorders.editsuccess=تم تغيير الطلب
 myorders.noorders=ليس لديك طلبات
+orders.ordersell=طلبات للبيع
+orders.submit=انشاء
+orders.sum1=المجموع
+orders.sum2=المجموع
+orders.title=الطلبات
+orders.yourcommission=العمولة لهذه العملية تقدر ب
+orderstatus.closed=غلق
+orderstatus.inprocess=بصدد العمل عليها
+orderstatus.opened=مفتوح
+register.email=E-mail*
+register.form=شكل التسجيل
+register.loginLabel= وهو يستخدم لتسجيل الدخول ، لا يمكن تغييرها.
+register.nickname=Nickname*
+register.password=كلمة السر*
+register.readrules= على دراية  بقواعد التسجيل *
+register.repeatpassword=اعد كلمة السر*
+register.sendletter= سوف تتلقى رسالة بالريد الإلكتروني لتأكيد تسجيلك
+register.submit=سجل
+register.successfullyproved=      لقد تم تاكيد عنوانك الالكتروني بنجاح, يمكنك الان الدخول
+register.title=تسجيل مستخدم جديد
+transaction.operationTypeWALLET_INNER_TRANSFER = وسائل النزوح الداخلي
+#not translated
+register.sponsor = الكفيل
+submitorder.buy=اشتري
+submitorder.cancell=الغاء
+submitorder.change=تغيير
+submitorder.commission=عمولة
+submitorder.edit=تعديل طلب
+submitorder.submit=عرض طلب
+submitorder.sumwithcommission=المجموع الجملي باعتبار العمولة
+submitorder.text=تاكيد انشاء الطلب بالبيانات التالية
+submitorder.title=تاكيد عرض الطلب
+subusermenu.api=API
+subusermenu.commissions=عمولة
+subusermenu.faq=FAQ
+subusermenu.news=اخبار
+subusermenu.rules=قواعد
+transaction.amount=المجموع
+transaction.user=المستخدم
+transaction.amountBuy=الشراءات الجملية
+transaction.commission= (%) العمولة
+transaction.commissionAmount=العمولة الجملية
+transaction.currency=العملة
+transaction.currencyBuy=عملة الشراء
+transaction.datetime=تاريخ انشاء الطلب
+transaction.exrates=exrates.me
+transaction.id=Id المعاملة
+transaction.merchant=نظام الدفع
+transaction.operationType=نوع
+transaction.operationTypeAcceptOrder=قبول الطلب
+transaction.operationTypeCreateOrder=انشاء طلب
+transaction.operationTypeINPUT=ادخال الاموال
+transaction.operationTypeOUTPUT=سحب الاموال
+transaction.acceptanceDatetime=تاريخ دراسة الطلب
+transaction.acceptanceUser=المستخدم الذي قام بدراسة الطلب
+#not Translated
+transaction.operationTypeREFERRAL=نظام الاحالة
+transaction.perfectmoney=Perfect.Money
+transaction.walletId=رقم المحفظة
+transaction.yandexmoney=عملة اليانديكس
+#not tranlsated
+transaction.status=الحالة
+transaction.titleInvoice=فواتير التاكيد
+transaction.confirmation=تاكيد
+transaction.accept=اكد
+#not tranlsated
+transaction.provided=اؤكد
+#not tranlsated
+transaction.notProvided=انتظار
+#not tranlsated
+transaction.confirmations= {0}/{1} انتظار التاكيد:
+#not tranlsated
+merchants.warn= يرجى الانتباه إلى حجم الاموال التي تدخلها بها. يجب أن تتطابق تماما مع المبلغ المذكور أعلاه
+#not translated
+transaction.initiatorEmail = Email
+#not translated
+transaction.referralLevel = المستوى ( النسبة)
+#not translated
+transactions.referralTransactionTitle = احالة المدفوعات
+#not translated
+transactions.absent=تاريخ العمليات فارغ
+transactions.title=تاريخ العمليات
+usermenu.history=تاريخ العمليات
+usermenu.inputCredits=ادخال اموال
+usermenu.orders=طلبات
+usermenu.outputCredits=سحب اموال
+usermenu.settings=اعدادات
+#not tranlsated
+usermenu.referral=رابط الاحالة الخاص بي
+#not tranlsated
+refferal.generate = توليد
+refferal.copy = نسخ
+#not tranlsated
+admin.referralLevelEdit = تغيير المستوى
+validation.emailexists=هذا البريد الالكتروني موجود !
+validation.emailincorrect=البريد الالكتروني غير صحيح
+validation.emailrequired=من الضرورري تعبئة خانة البريد الالكتروني !
+validation.nicknameexceed= لقد تجاوزت الحد الأقصى لعدد الأحرف!
+validation.nicknameexists=  استعمله شخص اخرnickname!
+validation.nicknamerequired=! nickname من الضروري تعبئة خانة
+validation.notreadrules=يجب عليك التعرف على قواعد المنبع !
+validation.orderNotEnoughMoney= بحسابك لا يوجد ما يكفي من المال لهذه العملية!
+validation.passwordincorrect=كلمة السر يجب أن تحتوي على الحروف (اللاتينية فقط) وأرقام يبلغ طولها الإجمالي من 8 إلى 20 حرفا!
+validation.passwordmismatch=كلمات السر تتطابق!
+validation.passwordrequired=ادخل كلمة السر!
+validation.phoneincorrect=! "380671234567"ادخل رقم الهاتف على شكل
 
-admin.upload = Upload
-admin.errorUploadFiles  = Error loading files. Valid format is *.png, *.jpg, *.jpeg not bigger than 5 MB
-admin.successUploadFiles = Files successfully uploaded
-admin.modal.delete = Delete
-admin.promptDeleteUserFiles = Are you sure you want to delete this file ?
-admin.successfulDeleteUserFiles = File removed successful
-admin.uploadFiles = Upload files (Only images *.png, *.jpeg, not bigger than 5 MB)
-admin.yourFiles= Uploaded files
-admin.internalError = An error has occurred. Please try again later.
+
+dashboard.otherpairs=ازواج اخرى
+merchants.currencyforoutput = عملة للادخال
+dashboard.orderPrice=الثمن
+register.capchaincorrect=, حاول مرة اخرى من فضلك capcha. تم خطا عند التحقق من
+order.fillfield = املا الخانة
+order.minvalue= يجب أن تكون القيمة أكبر من 0.000000001
+order.maxvalue= يجب أن تكون القيمة أقل من 10 000
+order.valuerange= يجب أن تكون القيمة في نطاق: 0.000000001 - 10000
+login.latinonly=الاسم يجب ان يكون لاتيني
+login.symbonly= "-" и "_"يمكن ان يحتوي على الرمز
+login.notdigit= لا يمكن ان يبتدا برقم
+
+
+admin.balance=الميزانية
+admin.transactions=المعاملة
+admin.wallets=الرصيد
+orderstatus.name=الحالة
+admin.submitfinpassword=ارسل
+admin.wrongfinpassword=تم ادخال كلمة السر المالية غير صحيحة.
+admin.absentfinpassword=كلمة السر غير معروفة, لانجاز عملية مالية يجب ادخال كلمة السر المالية
+admin.notconfirmedfinpassword= أنت لم تؤكد تغيير كلمة السر المالية. تحقق من بريدك الالكتروني واتبع التعليمات. أو الذهاب إلى إجراء تغيير كلمة السر مرة أخرى.
+register.unsuccessfullyproved=        رابط تأكيد التسجيل غير صالح (منتهية الصلاحية )
+admin.finpasswordproved=لقد قمتم بتاكيد كلمة السر المالية بنجاح.
+admin.finpasswordnotproved=        رابط تأكيد كلمة السر المالية غير صالح (منتهية الصلاحية)
+admin.passwordproved=لقد قمت بتاكيد كلمة السر الخاصة بك بنجاح
+admin.passwordnotproved=رابط تاكيد كلمة السر غير صالح ( منتهي الصلاحية)
+#not translated
+admin.upload = تحميل
+#not translated
+admin.errorUploadFiles = *.png, *.jpg, *.jpeg خطا عند تحميل الملفات
+5 МБالشكل المسموح به بحجم  لا يفوق
+#not translated
+admin.internalError = لقد حدث خطا, من فضلك حاول مرة اخرى
+#not translated
+admin.successUploadFiles = الملفات تم تحميلها بنجاح
+#not translated
+admin.modal.delete = حذف
+#not translated
+admin.promptDeleteUserFiles = هل حقا تريد حذف هذا الملف؟
+#not translated
+admin.successfulDeleteUserFiles = تم حذف الملف بنجاح
+#not translated
+admin.uploadFiles (فقط صور *.png, *.jpeg, بحجم لا يفوق  5 МБ)قم بتحميل الملف
+#not translated
+admin.yourFiles= ملفات محملة
+admin.ref=رابط
+orders.currencybuy=شراء
+orders.currencysale=بيع
+orders.for=ل
+order.rate=المسار بالوحدة
+order.total=الجملي
+order.commission=العمولة
+order.amountwithcommission=العمولة الجملية
+order.minrate=المسار الجملي يجب ان يفوق 0
+orders.exrate=المسار
+orders.date=التاريخ
+transaction.order=الطلب ID
+chart.hour=ساعة
+chart.hours=ساعات
+chart.hours1=ساعة
+chart.day=يوم
+chart.days=ايام
+chart.month=شهر
+chart.months=اشهر
+chart.nodata=لا يوجد معلومات
+login.newip=  غير معروف, تحقق من بريدك الالكتروني و اتبع التعليماتIP قمت بالتسجيل من عنوان
+emailsubmitnewip.subject= الجديد الخاص بك IP  لعنوانexrates.me اكد
+emailsubmitnewip.text=  من عنوان غير معروف, للتاكيد اتبع هذا الرابطexrates.me لقد سجلت على
+admin.newipproved= بنجاح IP-لقد قمت بتاكيد عنوان
+admin.newipnotproved= غير صالح ( منتهي الصلاحية) IP-رابط تاكيد عنوان
+admin.usersWallet=رمز حسابات المستخدمين
+wallets.amount=كمية الحسابات
+wallets.abalance=الميزانية الناشطة
+wallets.rbalance=مسجل
+wallets.average=المتوسطي بالحساب
+wallets.download=تفريغ البيانات
+orders.volume=حجم
+chart.candle=شمع
+chart.area=خط
+chart.wait=تحميل...
+orderinfo.title=حذف الطلب
+orderinfo.id=ID
+orderinfo.status=الحالة
+orderinfo.createdate=انشئ
+orderinfo.acceptdate=مقبول
+orderinfo.rate=مسار
+orderinfo.baseamount=كمية
+orderinfo.convertamount=المجموع
+orderinfo.companycommission=عمولة الشركة
+orderinfo.creator=انشا
+orderinfo.acceptor=مقبول
+orderinfo.deletedcount=السجلات المعكوسة ( وفقا للمعاملة):
+orderinfo.deleteerror=خطا عند الغاء الطلب
+orderinfo.searcherror= الطلب غير موجود
+ordersearch.title=البحث عن طلب
+ordersearch.submit=ابحث
+ordersearch.currencypair=ازواج
+ordersearch.type=نوع الطلب
+ordersearch.date=تاريخ الانشاء
+ordersearch.rate=المسار
+ordersearch.volume=المجموع
+ordersearch.datetimeplaceholder=ع ع ع ع-ش ش-ي ي سس:دد:سس
+ordersearch.datelaceholder=ع ع ع ع -ش ش-ي ي
+ordersearch.errornumber=الشكل: ارقام, نقطة
+ordersearch.errordatetime=الشكل: ع ع ع ع-ش ش-ي ي سس:دد:سس
+ordersearch.errordate=الشكل: ع ع ع ع -ش ش-ي ي
+ordersearch.erroremail=الشكل: user@user.com
+orders.getordererror= ID {0} لا يوجد طلب ب
+orders.acceptsaveerror=خطا عند تخزين الطلب
+transaction.providerror=خطا عند انشاء المعاملة
+order.notenoughreservedmoneyforcreator=عدم كفاية المال باحتياطي صاحب الطلب
+order.notenoughmoneyforacceptor=عدم كفاية المال بالحساب لقبول الطلب
+order.createwalleterror= {0}خطا عند انشاء المحفظة اللازمة لانجازالعملية للمستخدم
+order.createerror= {0}خطا عند انشاء الطلب:
+order.alreadyacceptederror=تم قبول الطلب
+order.recreateerror=تم ارسال امر الطلب. انتظر النتيجة.
+order.redeleteerror=تم ارسال امر حذف الطلب. انتظر النتيجة.
+order.cannotcancel=لا يمكن حذف الطلب
+wallets.balance=الميزانية
+news.title=اخبار
+news.more=التفاصيل....
+news.absent=لا يوجد اخبار باللغة الروسية
+news.locale=لغة الاخبار
+news.date=تاريخ الاخبار
+news.datetimeplaceholder=ع ع ع ع-ش ش-ي ي
 
 merchants.depositNotificationWithCurrencyCNY.body = Please pay {0} on the wallet {1} <br> \
     ICBC <br> \
@@ -316,204 +539,7 @@ orders.datefinal=final date
 orders.listtobuy=list of buy orders
 orders.listtosell=list of sell orders
 orders.orderbuy=order buy
-orders.ordersell=order sell
-orders.submit=Create
-orders.sum1=sum
-orders.sum2=sum
-orders.title=Orders
-orders.yourcommission=transaction commission amounts
-orderstatus.closed=Closed
-orderstatus.inprocess=
-orderstatus.opened=Opened
-register.email=E-mail*
-register.form=registration form
-register.loginLabel=used as an access login, shall not be changed.
-register.nickname=Nickname*
-register.password=password*
-register.readrules=read and understood registrtion rules*
-register.repeatpassword=repeat password*
-register.sendletter=you've been sent a letterat the hash to confirm registration
-register.submit=get registered
-register.successfullyproved=You have successfully verified your email hash. Now you can log in
-register.title=registration of a new user
-submitorder.buy=buy
-submitorder.cancell=Cancel
-submitorder.change=change order
-submitorder.commission=commission
-submitorder.edit=edit order
-submitorder.submit=submit order
-submitorder.sumwithcommission=sum including commission
-submitorder.text=confirm the submission of order with the given parameters
-submitorder.title=confirmation of order submit
-subusermenu.api=API
-subusermenu.commissions=commissions
-subusermenu.faq=FAQ
-subusermenu.news=news
-subusermenu.rules=Rules
-transaction.amount=Amount
-transaction.amountBuy=Amount purchase
-transaction.commission=Commission(%)
-transaction.commissionAmount=Fee amount
-transaction.currency=Currency
-transaction.currencyBuy=Purchase currency
-transaction.datetime=Transaction date
-transaction.exrates=exrates.me
-transaction.id=Id transactions
-transaction.merchant=Payment system
-transaction.operationTypeWALLET_INNER_TRANSFER = Wallet inner transfer
-transaction.operationType=Transaction type
-transaction.operationTypeAcceptOrder=Accept order
-transaction.operationTypeCreateOrder=Create Order
-transaction.operationTypeINPUT=input
-transaction.operationTypeOUTPUT=output
-transaction.perfectmoney=Perfect.Money
-transaction.walletId=wallet number
-transaction.yandexmoney=Yandex.Money
-transaction.operationTypeREFERRAL=Referral system
-transaction.referralLevel = Level (percent)
-transactions.referralTransactionTitle = Referral payments
-transaction.status=Status
-transaction.titleInvoice=Invoices for confirmation
-transaction.accept=accept
-transaction.provided=Confirmed
-transaction.notProvided=Waiting for confirmation
-transaction.confirmations=Waiting for confirmations: {0}/{1}
-merchants.warn=Please pay attention to the amount of money you inputting. It must exactly match the amount that is listed above
-transactions.absent=the history of transactions is absent
-transactions.title=history of transactions
-transaction.user=User
-transaction.acceptanceDatetime=Acceptance date
-transaction.acceptanceUser=Acceptance user
-transaction.confirmation=Confirmation
-usermenu.history=history of transactions
-usermenu.inputCredits=input credits
-usermenu.orders=Orders
-usermenu.outputCredits=output credits
-usermenu.settings=settings
-usermenu.referral=My referral reference
-refferal.generate = Generate
-refferal.copy = Copy
-validation.emailexists=this e-mail already exists!
-validation.emailincorrect=incorrect e-mail!
-validation.emailrequired=email field shall be filled in
-validation.nicknameexceed=the allowed number of symbols was exceeded!
-validation.nicknameexists=this nickname already exists!
-validation.nicknamerequired=nickname fiels shall be filled in!
-validation.notreadrules=resource rules shall be read!
-validation.orderNotEnoughMoney=not enough money in your wallet for the transaction!
-validation.passwordincorrect=The password should consist of letters (latin only) and numbers with a total length of 8 to 20 characters!
-validation.passwordmismatch=passwords do not match!
-validation.passwordrequired=enter password!
-validation.phoneincorrect=Enter the phone number in "380671234567" format !
-dashboard.otherpairs=Other pairs
-transaction.initiatorEmail = Email
-merchants.currencyforoutput = output currency
-dashboard.orderPrice=Price
-register.capchaincorrect=A problem occurred while checking the capcha. Try again, please
-order.fillfield = Complete the field
-order.minvalue=The value must be greater than 0.000000001
-order.maxvalue=The value must be less than 10 000
-order.valuerange=The value must be in the following range: 0.000000001 - 10 000
-login.latinonly=The name must be Latin characters
-login.symbonly= Can contain the characters "-" and "_"
-login.notdigit= Must not start with a digit
 
-register.sponsor = Sponsor
-
-admin.balance=Balance
-admin.transactions=Transactions
-admin.wallets=Wallets
-orderstatus.name=Status
-admin.submitfinpassword=submit
-admin.wrongfinpassword=Entered the wrong financial password
-admin.absentfinpassword=The financial password is not defined. You must set the financial password to make financial operations
-admin.notconfirmedfinpassword=You must to confirm financial password change. check your e-mail and follow the instructions in received message. Or follow the procedure for changing the password again.
-register.unsuccessfullyproved=Link to registration confirmation is not valid (expired)
-admin.finpasswordproved=You have successfully confirmed your financial password
-admin.finpasswordnotproved=Link to financial password confirmation is not valid (expired)
-admin.passwordproved=You have successfully confirmed your password
-admin.passwordnotproved=Link to password confirmation is not valid (expired)
-admin.ref=Reference
-orders.currencybuy=Buy
-orders.currencysale=Sell
-orders.for=for
-order.rate=Exchange rate per unit
-order.total=Total
-order.commission=Commission
-order.amountwithcommission=Total with the commission
-order.minrate=The exchange rate must be greater than 0
-orders.exrate=Rate
-orders.date=Deal date
-transaction.order=Order ID
-chart.hour=hour
-chart.hours=hours
-chart.hours1=hours
-chart.day=day
-chart.days=days
-chart.month=month
-chart.months=months
-#cannot use 'chart.nodata = no data' - error provoked
-chart.nodata=data is absent
-login.newip=You have registered from unfamiliar IP-address. Check your e-mail and follow the instructions in received message.
-emailsubmitnewip.subject=Confirm exrates.me your new ip address
-emailsubmitnewip.text=You have registered on exrates.me from an unfamiliar IP-address. Click here to confirm
-admin.newipproved=You have successfully confirmed IP-address
-admin.newipnotproved=Link to IP-address confirmation is not valid (expired)
-admin.usersWallet=Users wallets summary
-wallets.amount=number of accounts
-wallets.abalance=Active balance
-wallets.rbalance=Reserved
-wallets.average=on average per one account
-wallets.download=Download the data
-orders.volume=Volume
-chart.candle=Candles
-chart.area=Line
-chart.wait=Wait ...
-orderinfo.title=Removal of the order
-orderinfo.id=ID
-orderinfo.status=Status
-orderinfo.createdate=Created
-orderinfo.acceptdate=Accepted
-orderinfo.rate=Rate
-orderinfo.baseamount=Amount
-orderinfo.convertamount=Total
-orderinfo.companycommission=Company commission
-orderinfo.creator=Creator
-orderinfo.acceptor=Acceptor
-orderinfo.deletedcount=Number of cancelled records (including transactions):
-orderinfo.deleteerror= There was error while cancelling order
-orderinfo.searcherror= Order not found
-ordersearch.title=Search the order
-ordersearch.submit=Search
-ordersearch.currencypair=Currency pair
-ordersearch.type=Type the order
-ordersearch.date=Date
-ordersearch.rate=Rate
-ordersearch.volume=Volume
-ordersearch.datetimeplaceholder=yyyy-mm-dd HH:mm:ss
-ordersearch.datelaceholder=yyyy-mm-dd
-ordersearch.errornumber=Format: digits, point
-ordersearch.errordatetime=Format: yyyy-mm-dd HH:mm:ss
-ordersearch.errordate=Format: yyyy-mm-dd
-ordersearch.erroremail=Format: user@user.com
-orders.getordererror= Order not found with ID {0}
-orders.acceptsaveerror=Error while saving order
-transaction.providerror=Failed to provide transaction
-order.notenoughreservedmoneyforcreator=Not enough reserved money for creator when accept the order
-order.notenoughmoneyforacceptor=Not enough available money for acceptor when accept the order
-order.createwalleterror=Error while creating wallet required to perform the operation for user {0}
-order.createerror=Error while creating order: {0}
-order.alreadyacceptederror=The order is accepted already
-order.recreateerror=The form to create the order has been submited already. Wait for result
-order.redeleteerror=The form to delete the order has been submited already. Wait for result
-order.cannotcancel=The order can not be deleted
-wallets.balance=Balance
-news.title=NEWS
-news.more=More...
-news.absent=News in English is missing
-news.locale=Language news
-news.date=Date news
-news.datetimeplaceholder=yyyy-mm-dd
 news.errordatetime=Format: yyyy-mm-dd
 news.resource=The directory to store
 news.resourceerror=
