--- a/Controller/src/main/resources/messages_en.properties
+++ b/Controller/src/main/resources/messages_en.properties
@@ -78,7 +78,7 @@ dashboard.contactsAndSupport=Contacts and Support
 dashboard.support=Support
 dashboard.depositAndWithdraw=deposit and withdraw
 dashboard.documentation=DOCUMENTATION
-dashboard.entrance=entrance
+dashboard.entrance=Login
 dashboard.fee=commission:
 dashboard.feeForTransaction=fee for transaction
 dashboard.forBeginners=for beginners
