--- a/Controller/src/main/resources/messages_en.properties
+++ b/Controller/src/main/resources/messages_en.properties
@@ -527,7 +527,7 @@ mywallets.abalance=Balance
 mywallets.balance=Available balance
 dashboard.price=Rate for
 usermenu.myorders=History
-usermenu.mywallets=Balance
+usermenu.mywallets=Refill/Withdraw
 chat.invalidSymbols = The message could not be sent because it contains illegal characters or is longer than 256 characters.
 operationtype.INPUT=INPUT
 operationtype.OUTPUT=OUTPUT
