--- a/Controller/src/main/resources/messages_ru.properties
+++ b/Controller/src/main/resources/messages_ru.properties
@@ -592,7 +592,7 @@ mywallets.abalance=Баланс
 mywallets.balance=Доступный баланс
 dashboard.price=Цена за
 usermenu.myorders=История
-usermenu.mywallets=Баланс
+usermenu.mywallets=Пополнить/Вывод
 #not translated
 chat.invalidSymbols = Сообщение не может быть отправлено, так как содержит запрещенные символы либо длиннее 256 символов.
 operationtype.INPUT=ПРИХОД
