--- a/Controller/src/main/resources/messages_ru.properties
+++ b/Controller/src/main/resources/messages_ru.properties
@@ -463,8 +463,8 @@ chart.month=месяц
 chart.months=месяцев
 chart.nodata=данные отсутствуют
 login.newip=Вы зарегистрировались с незнакомого IP-адреса. Проверьте почту и следуйте дальнейшим инструкциям.
-emailsubmitnewip.subject=Подтвердите exrates.me свой новый IP-адрес
-emailsubmitnewip.text=Вы зарегистрировались на exrates.me с незнакомого адреса. Для подтверждения пройдите по ссылке
+emailsubmitnewip.subject=Новый IP-адрес
+emailsubmitnewip.text=Вы зарегистрировались на exrates.me с адреса {0}.
 admin.newipproved=Вы успешно подтвердили IP-адрес
 admin.newipnotproved=Ссылка на подтверждение IP-адреса не действительна (просрочена).
 admin.usersWallet=Свод по счетам пользователей
