--- a/Controller/src/main/resources/messages_en.properties
+++ b/Controller/src/main/resources/messages_en.properties
@@ -397,8 +397,8 @@ chart.months=months
 #cannot use 'chart.nodata = no data' - error provoked
 chart.nodata=data is absent
 login.newip=You have registered from unfamiliar IP-address. Check your e-mail and follow the instructions in received message.
-emailsubmitnewip.subject=Confirm exrates.me your new ip address
-emailsubmitnewip.text=You have registered on exrates.me from an unfamiliar IP-address. Click here to confirm
+emailsubmitnewip.subject=New ip address
+emailsubmitnewip.text=You have registered on exrates.me from an IP-address {0}. Click here to confirm
 admin.newipproved=You have successfully confirmed IP-address
 admin.newipnotproved=Link to IP-address confirmation is not valid (expired)
 admin.usersWallet=Users wallets summary
