--- a/Controller/src/main/resources/messages_en.properties
+++ b/Controller/src/main/resources/messages_en.properties
@@ -398,7 +398,7 @@ chart.months=months
 chart.nodata=data is absent
 login.newip=You have registered from unfamiliar IP-address. Check your e-mail and follow the instructions in received message.
 emailsubmitnewip.subject=New ip address
-emailsubmitnewip.text=You have registered on exrates.me from an IP-address {0}. Click here to confirm
+emailsubmitnewip.text=You have registered on exrates.me from an IP-address {0}.
 admin.newipproved=You have successfully confirmed IP-address
 admin.newipnotproved=Link to IP-address confirmation is not valid (expired)
 admin.usersWallet=Users wallets summary
