--- a/Controller/src/main/resources/messages_cn.properties
+++ b/Controller/src/main/resources/messages_cn.properties
@@ -180,7 +180,7 @@ transactions.title=业务记录
 usermenu.history=交易记录
 usermenu.inputCredits==输入金
 usermenu.myorders=我的单据
-usermenu.mywallets=我的帐
+usermenu.mywallets=充值/提现
 usermenu.orders=单据
 usermenu.outputCredits=输出金
 usermenu.settings=设置
@@ -230,7 +230,7 @@ ordersearch.submit = 找一下
 admin.cancel = 取消 
 orderinfo.title = 单据排除
 admin.yourFiles = 上传的文件
-emailsubmitnewip.text = 您注册与未知地址exrates.me。要确认请点击这里
+emailsubmitnewip.text = 您注册在exrates.me通过地址 {0}
 admin.absentfinpassword =不计算财务密码。要进行必要的设置密码的财政金融交易
 admin.role = 作用 
 dashboard.howItWork = 这样怎么操作 
