--- a/Controller/src/main/resources/messages_cn.properties
+++ b/Controller/src/main/resources/messages_cn.properties
@@ -344,7 +344,7 @@ chart.hours1 = 小时
 login.email = Email
 chart.month = 月
 dberror.title = 错误!
-emailsubmitnewip.subject = 确定 exrates.me 自己的 IP 记址
+emailsubmitnewip.subject = 新IP地址
 transaction.operationTypeAcceptOrder = 收到单据
 orders.acceptsaveerror = 在保存单据的错误
 dashboard.yourBalance = 你们的钱
