--- a/Controller/src/main/resources/messages_en.properties
+++ b/Controller/src/main/resources/messages_en.properties
@@ -440,7 +440,7 @@ ordersearch.errordate=Format: yyyy-mm-dd
 ordersearch.erroremail=Format: user@user.com
 orders.getordererror= Order not found with ID {0}
 orders.acceptsaveerror=Error while saving order
-transaction.providerror=Failed to provide transaction
+transaction.createerror=Failed to create transaction
 order.notenoughreservedmoneyforcreator=Not enough reserved money for creator when accept the order
 order.notenoughmoneyforacceptor=Not enough available money for acceptor when accept the order
 order.createwalleterror=Error while creating wallet required to perform the operation for user {0}
