--- a/Controller/src/main/resources/messages_ru.properties
+++ b/Controller/src/main/resources/messages_ru.properties
@@ -151,7 +151,7 @@ login.notFound=Неверный пароль или логин!
 login.password=Пароль
 login.submit=Войти
 login.title=Пожалуйста, войдите
-mechants.commission=Комиссия Биржы
+mechants.commission=Комиссия Биржи
 mechants.perfectmoney=Perfect Money
 mechants.yandexmoney=Яндекс Деньги
 merchants.amountToBeCredited=Итого сумма к зачислению
