--- a/Controller/src/main/resources/messages_ar.properties
+++ b/Controller/src/main/resources/messages_ar.properties
@@ -481,7 +481,7 @@ ordersearch.errordate=الشكل: ع ع ع ع -ش ش-ي ي
 ordersearch.erroremail=الشكل: user@user.com
 orders.getordererror= ID {0} لا يوجد طلب ب
 orders.acceptsaveerror=خطا عند تخزين الطلب
-transaction.providerror=خطا عند انشاء المعاملة
+transaction.createerror=خطا عند انشاء المعاملة
 order.notenoughreservedmoneyforcreator=عدم كفاية المال باحتياطي صاحب الطلب
 order.notenoughmoneyforacceptor=عدم كفاية المال بالحساب لقبول الطلب
 order.createwalleterror= {0}خطا عند انشاء المحفظة اللازمة لانجازالعملية للمستخدم
