--- a/Controller/src/main/resources/messages_cn.properties
+++ b/Controller/src/main/resources/messages_cn.properties
@@ -406,7 +406,7 @@ admin.wrongfinpassword = 财政密码输入不正确。
 merchants.waiting = 期望
 emailsubmitChangeFinPassword.subject =确认密码变更exrates.me金融
 dashboard.sellOrders = 销售订单：
-merchants.depositNotification.body =请支付{0}{1}钱包
+merchants.depositNotification.body =请支付 {0} {1} 钱包
 #not translated
 merchants.depositNotificationWithCurrency.body = 請付人民幣 {0} 在錢包 {1} <br> \
     ICBC <br> \
@@ -440,7 +440,7 @@ admin.users = 使用者
 ordersearch.rate = 课程
 about_us.telephone = 电话: {0}
 withdrawal.commission = 佣金
-transaction.providerror =错误创建交易
+transaction.createerror =错误创建交易
 login.latinonly = 该名称必须以拉丁字母
 admin.errorUploadFiles = 错误加载文件。可接受的格式 - *.png和* .JPG，*不超过5 MB.JPEG
 admin.submitfinpassword = 回法
