added THB currency support

--- a/Controller/src/main/resources/messages_cn.properties
+++ b/Controller/src/main/resources/messages_cn.properties
@@ -418,6 +418,23 @@ merchants.depositNotificationWithCurrency.body = 請付人民幣 {0} 在錢包 {
     CONSTRUCTION <br> \
     ANTON MAZNYI <br> \
     6217000010079289347
+merchants.depositNotificationWithCurrencyCNY.body = Silahkan membayar {0} ke akun {1} <br> \
+  ICBC <br> \
+  ???????????????20???????<br>\
+  ICBC ANTON MAZNYI<br>\
+  6212260200108499001<br>\
+  or China construction Bank<br>\
+  ???????????????93?<br>\
+  CONSTRUCTION <br> \
+  ANTON MAZNYI <br> \
+  6217000010079289347
+merchants.depositNotificationWithCurrencyIDR.body = Silahkan membayar {0} ke akun {1} <br> \
+    1. Bank danamon <br> \
+    2. name  i nyoman mardana<br>\
+    3. Schet 3600851194
+merchants.depositNotificationWithCurrencyTHB.body = Please pay {0} on the wallet {1} <br> \
+    Kasikorn bank <br> \
+    015-1-65751-6
 dashboard.personalArea = 私人办公室
 emailsubmitChangePassword.subject = 更改密码确认exrates.me=请注意您的金额。它必须完全匹配上面列出的金额
 admin.finpasswordnotproved = 链接到财务密码确认无效（过期）。
