--- a/Controller/src/main/resources/messages_in.properties
+++ b/Controller/src/main/resources/messages_in.properties
@@ -208,6 +208,9 @@ merchants.depositNotificationWithCurrencyIDR.body = Silahkan membayar {0} ke aku
     1. Bank danamon <br> \
     2. name  i nyoman mardana<br>\
     3. Schet 3600851194
+merchants.depositNotificationWithCurrencyTHB.body = Please pay {0} on the wallet {1} <br> \
+    Kasikorn bank <br> \
+    015-1-65751-6
 #not translated
 merchants.depositNotificationWithFee =Silahkan membayar %1s di dompet %1s (ditambah Komisi Koin EDR )
 #not translated
