--- a/Controller/src/main/resources/messages_ru.properties
+++ b/Controller/src/main/resources/messages_ru.properties
@@ -207,6 +207,9 @@ merchants.depositNotificationWithCurrencyIDR.body = Пожалуйста, опл
     1. Bank danamon <br> \
     2. name  i nyoman mardana<br>\
     3. Schet 3600851194
+merchants.depositNotificationWithCurrencyTHB.body = Пожалуйста, оплатите {0} на расчетный счет {1} <br> \
+    Kasikorn bank <br> \
+    015-1-65751-6
 #not translated
 merchants.depositNotificationWithFee = Пожалуйста, оплатите %1s на кошелек %1s (Включая комиссию EDR Coin)
 #not translated
