--- a/Controller/src/main/resources/messages_en.properties
+++ b/Controller/src/main/resources/messages_en.properties
@@ -200,6 +200,9 @@ merchants.depositNotificationWithCurrencyIDR.body = Please pay {0} on the wallet
     1. Bank danamon <br> \
     2. name  i nyoman mardana<br>\
     3. Schet 3600851194
+merchants.depositNotificationWithCurrencyTHB.body = Please pay {0} on the wallet {1} <br> \
+    Kasikorn bank <br> \
+    015-1-65751-6
 merchants.depositNotification.header = Exrates payment notification
 merchants.depositNotificationWithFee = Please pay %1s on the wallet %1s (Including EDR Coin commission)
 merchants.sum=Sum
