--- a/Controller/src/main/resources/messages_ar.properties
+++ b/Controller/src/main/resources/messages_ar.properties
@@ -859,3 +859,7 @@ Exrates للتأكد من كيفية استعمال الموقع cookie الشر
 </p>\
 <p> نحن لا نضم المعلومات المستهدفة مثل التركيبة السكانية، والموقع، مع معلومات شخصية يتم جمعها من خلال إعلانات أو مصدر الإعلان على شبكة الإنترنت؛ أو الكشف عن هذه المعلومات إلى أطراف ثالثة من خلال علامات إعادة التسويق أو أي بيانات تدفق المعلومات عن المنتجات المرتبطة بالإعلان لدينا؛ ولا نشارك في قاعدة بيانات جوجل معلومات عن الموقع الدقيق من دون موافقة الطرفين. </p>\
 <p> نحن لا نستخدم قوائم إعادة التسويق مع المعلومات الشخصية الحساسة حول الأفراد الذين يزورون موقعنا على الانترنت أو باستخدام تطبيقات الجوال، بغض النظر عن ما إذا كانت المعلومات التي يتم جمعها من قبلنا مباشرة، أو هن طريق عقد جمعية مع ملف الزوار معين عن طريق تحليل سلوك أو على الموقع الإلكتروني. قيود على إنشاء قوائم يمكن فرضها على حد سواء على صفحات فردية وكذلك إلى المواقع والتطبيقات بشكل كامل ومضمون. الإعلان لا يعني معرفة المعلومات الشخصية أو الحساسة.</p>
+
+orders.walletNotFound=Wallet not found
+orders.walletUpdateError=Error while transferring costs between orders
+orders.companyWalletNotFound=Company wallet not found
