--- a/Controller/src/main/resources/messages_in.properties
+++ b/Controller/src/main/resources/messages_in.properties
@@ -675,3 +675,7 @@ zopim.livechat.offlineForm.greetings=Kami sedang offline sekarang. Kami mohon ma
 
 user.fileNotChosen=File not chosen
 user.browse=Browse...
+
+orders.walletNotFound=Wallet not found
+orders.walletUpdateError=Error while transferring costs between orders
+orders.companyWalletNotFound=Company wallet not found
