--- a/Controller/src/main/resources/messages_ar.properties
+++ b/Controller/src/main/resources/messages_ar.properties
@@ -616,7 +616,7 @@ dashboard.privacy=السرية
 contacts.feedback=الاتصال العكسي
 contacts.name=الاسم
 contacts.messageText=نص الرسالة
-contacts.contactPhone= الهاتف:+19734742145
+contacts.contactPhone= الهاتف:19734742145+
 validation.messageexceeds= حجم الرسالة تجاوز الحد
 validation.messageIncorrectSize= يجب أن يكون حجم الرسالة 2من-500 حرفا
 validation.nameIncorrectSize= يجب أن يكون حجم الاسم بين 2 و 30 حرفا
