--- a/Controller/src/main/resources/messages_in.properties
+++ b/Controller/src/main/resources/messages_in.properties
@@ -645,7 +645,8 @@ dashboard.privacy=Dirahasiakan
 contacts.feedback=Feedback
 contacts.name=Nama
 contacts.messageText=Pesan text
-contacts.contactPhone=Nomor telepon yang bisa dihubungi
+contacts.contactPhone=Nomor telepon yang bisa dihubungi<br>\
+  +19734742145
 contacts.address=<p>Address:</p>\
 <p>99 Foch ave</p>\
 <p>Staten Island, NY 10305</p>\
