--- a/Controller/src/main/resources/messages_in.properties
+++ b/Controller/src/main/resources/messages_in.properties
@@ -163,7 +163,7 @@ merchants.continue=Lanjutkan
 merchants.deposit=Isi
 merchants.dismiss=Membatalkan
 merchants.incorrectPaymentDetails=Rincian pembayaran tidak valid.
-merchants.inputCurrency=Jumlah komisi mata uang
+merchants.inputCurrency=Mata uang masukan
 merchants.inputTitle=Deposit dana
 merchants.internalError= Ada kesalahan yang terjadi. Silakan coba lagi nanti
 merchants.invalidMerchant= Maaf, merchant tidak valid
