--- a/Controller/src/main/resources/messages_en.properties
+++ b/Controller/src/main/resources/messages_en.properties
@@ -147,7 +147,7 @@ merchants.continue=Continue
 merchants.deposit=Refill
 merchants.dismiss=Dismiss
 merchants.incorrectPaymentDetails=Incorrect payment details.
-merchants.inputCurrency=input currency
+merchants.inputCurrency=Input currency
 merchants.inputTitle=Deposit
 merchants.internalError=an error occurred. Please try again later.
 merchants.invalidMerchant=We are sorry but the merchant is not supported
@@ -345,7 +345,7 @@ validation.passwordrequired=enter password!
 validation.phoneincorrect=Enter the phone number in "380671234567" format !
 dashboard.otherpairs=Other pairs
 transaction.initiatorEmail = Email
-merchants.currencyforoutput = output currency
+merchants.currencyforoutput = Output currency
 dashboard.orderPrice=Price
 register.capchaincorrect=A problem occurred while checking the capcha. Try again, please
 order.fillfield = Complete the field
@@ -444,8 +444,8 @@ ordersearch.erroremail=Format: user@user.com
 orders.getordererror= Order not found with ID {0}
 orders.acceptsaveerror=Error while saving order
 transaction.createerror=Failed to create transaction
-order.notenoughreservedmoneyforcreator=Not enough reserved money for creator when accept the order
-order.notenoughmoneyforacceptor=Not enough available money for acceptor when accept the order
+order.notenoughreservedmoneyforcreator=Insufficient reserved coins for accepting the order(s)
+order.notenoughmoneyforacceptor=Insufficient coins for accepting the order(s)
 order.createwalleterror=Error while creating wallet required to perform the operation for user {0}
 order.createerror=Error while creating order: {0}
 order.alreadyacceptederror=The order is accepted already
