--- a/Controller/src/main/resources/messages_ru.properties
+++ b/Controller/src/main/resources/messages_ru.properties
@@ -484,13 +484,13 @@ orderinfo.title=Удаление ордера
 orderinfo.id=ID
 orderinfo.status=Статус
 orderinfo.createdate=Создан
-orderinfo.acceptdate=Акцептован
+orderinfo.acceptdate=Принят
 orderinfo.rate=Курс
 orderinfo.baseamount=Количество
 orderinfo.convertamount=Сумма
 orderinfo.companycommission=Комиссия компании
 orderinfo.creator=Создал
-orderinfo.acceptor=Акцептовал
+orderinfo.acceptor=Приянл
 orderinfo.deletedcount=Сторнировано записей (с учетом транзакций):
 orderinfo.deleteerror=Ошибка при отмене ордера
 orderinfo.searcherror= Ордер не найден
@@ -511,10 +511,10 @@ orders.getordererror= Не найден ордер с ID {0}
 orders.acceptsaveerror=Ошибка при сохранении ордера
 transaction.createerror=Ошибка при создании транзакции
 order.notenoughreservedmoneyforcreator=Не достаточно средств на резерве создателя ордера
-order.notenoughmoneyforacceptor=Не достаточно средств на счету для акцепта ордера
+order.notenoughmoneyforacceptor=Не достаточно средств на счету для принятия ордера
 order.createwalleterror=Ошибка при создании кошелька, необходимого для совершения операции для пользователя {0}
 order.createerror=Ошибка при создании ордера: {0}
-order.alreadyacceptederror=Ордер уже акцептован
+order.alreadyacceptederror=Ордер уже принят
 order.recreateerror=Форма на создание ордера уже отправлена. Дождитесь результата
 order.redeleteerror=Форма на удаление ордера уже отправлена. Дождитесь результата
 order.cannotcancel=Ордер не может быть удален
@@ -583,7 +583,7 @@ history.inputoutput=Ввод/вывод
 orders.amount=Сумма
 orders.type=Тип ордера
 orders.currencypair=Валютная пара
-order.lockerror=Не удается захватить выбранный список ордеров для акцепта
+order.lockerror=Не удается захватить выбранный список ордеров для принятия
 order.acceptsuccess={0} ордера были успешно приняты
 table.backward=Предыдущая
 table.forward=Следующая
