add bitcoin manual input

--- a/Controller/src/main/resources/messages_ar.properties
+++ b/Controller/src/main/resources/messages_ar.properties
@@ -327,6 +327,8 @@ transaction.yandexmoney=عملة اليانديكس
 #not tranlsated
 transaction.status=الحالة
 transaction.titleInvoice=فواتير التاكيد
+#not tranlsated
+transaction.titleBitcoin=Bitcoins for confirmation
 transaction.confirmation=تاكيد
 transaction.accept=اكد
 #not tranlsated
