--- a/Controller/src/main/resources/messages_en.properties
+++ b/Controller/src/main/resources/messages_en.properties
@@ -312,6 +312,7 @@ transaction.referralLevel = Level (percent)
 transactions.referralTransactionTitle = Referral payments
 transaction.status=Status
 transaction.titleInvoice=Invoices for confirmation
+transaction.titleBitcoin=Bitcoins for confirmation
 transaction.accept=accept
 transaction.provided=Confirmed
 transaction.notProvided=Waiting for confirmation
