--- a/Controller/src/main/resources/messages_in.properties
+++ b/Controller/src/main/resources/messages_in.properties
@@ -356,6 +356,8 @@ transaction.yandexmoney=Uang Yandex
 #not tranlsated
 transaction.status=Status
 transaction.titleInvoice=Invoice untuk konfirmasi
+#not tranlsated
+transaction.titleBitcoin=Bitcoins for confirmation
 
 transaction.confirmation=Konfirmasi
 
