--- a/Controller/src/main/resources/messages_ru.properties
+++ b/Controller/src/main/resources/messages_ru.properties
@@ -355,6 +355,7 @@ transaction.yandexmoney=Яндекс.Деньги
 #not tranlsated
 transaction.status=Статус
 transaction.titleInvoice=Инвойсы для подтверждения
+transaction.titleBitcoin=Биткоины для подтверждения
 transaction.confirmation=Подтверждение
 transaction.accept=подтвердить
 #not tranlsated
