--- a/Controller/src/main/resources/messages_ar.properties
+++ b/Controller/src/main/resources/messages_ar.properties
@@ -867,3 +867,6 @@ Exrates للتأكد من كيفية استعمال الموقع cookie الشر
 orders.walletNotFound=Wallet not found
 orders.walletUpdateError=Error while transferring costs between orders
 orders.companyWalletNotFound=Company wallet not found
+admin.sessionControl=Session control
+admin.sessionControl.sessionId=Session ID
+admin.sessionControl.action=Action
