--- a/Controller/src/main/resources/messages_en.properties
+++ b/Controller/src/main/resources/messages_en.properties
@@ -598,3 +598,6 @@ dashboard.privacyContent=<div class='grayText'><strong>We respect your privacy a
 orders.walletNotFound=Wallet not found
 orders.walletUpdateError=Error while transferring costs between orders
 orders.companyWalletNotFound=Company wallet not found
+admin.sessionControl=Session control
+admin.sessionControl.sessionId=Session ID
+admin.sessionControl.action=Action
