--- a/Controller/src/main/resources/messages_in.properties
+++ b/Controller/src/main/resources/messages_in.properties
@@ -685,3 +685,6 @@ user.browse=Browse...
 orders.walletNotFound=Wallet not found
 orders.walletUpdateError=Error while transferring costs between orders
 orders.companyWalletNotFound=Company wallet not found
+admin.sessionControl=Session control
+admin.sessionControl.sessionId=Session ID
+admin.sessionControl.action=Action
