--- a/Controller/src/main/resources/messages_ru.properties
+++ b/Controller/src/main/resources/messages_ru.properties
@@ -670,3 +670,6 @@ dashboard.privacyContent=<div class='grayText'><strong>We respect your privacy a
 orders.walletNotFound=Кошелёк не найден
 orders.walletUpdateError=Ошибка при перемещении средств между кошельками
 orders.companyWalletNotFound=Кошелёк компании не найден
+admin.sessionControl=Контроль сессий
+admin.sessionControl.sessionId=ID сессии
+admin.sessionControl.action=Действие
