fix chinese locale withdrawal

--- a/Controller/src/main/resources/messages_cn.properties
+++ b/Controller/src/main/resources/messages_cn.properties
@@ -467,7 +467,7 @@ orderinfo.rate = 课程
 chart.day = 日
 orderinfo.companycommission =公司董事会
 transaction.provided = 决定
-merchants.withdrawNotification = 您的＃{0}撤出通过采取{}1℃制度，并会在48小时内处理。
+merchants.withdrawNotification = 您的＃{0}撤出通过采取{1}℃制度，并会在48小时内处理。
 chart.hour = 小时
 wallets.average = 平均分
 admin.finPassword = 财政密码
