--- a/Controller/src/main/resources/messages_in.properties
+++ b/Controller/src/main/resources/messages_in.properties
@@ -195,15 +195,8 @@ merchants.pendingEnrollment=Jangka waktu penerimaan dana 48 jam
 merchants.depositNotification.body =Silahkan membayar {0} ke dompet {1}
 #not translated
 merchants.depositNotificationWithCurrencyCNY.body = Silahkan membayar {0} ke akun {1} <br> \
-  ICBC <br> \
-  ???????????????20???????<br>\
-  ICBC ANTON MAZNYI<br>\
-  6212260200108499001<br>\
-  or China construction Bank<br>\
-  ???????????????93?<br>\
-  CONSTRUCTION <br> \
-  ANTON MAZNYI <br> \
-  6217000010079289347
+    帐号：110923954410401, <br> \
+    开户行：招商银行北京东直门支行
 merchants.depositNotificationWithCurrencyIDR.body = Silahkan membayar {0} ke akun {1} <br> \
     1. Bank danamon <br> \
     2. name  i nyoman mardana<br>\
