--- a/Controller/src/main/resources/messages_cn.properties
+++ b/Controller/src/main/resources/messages_cn.properties
@@ -418,21 +418,14 @@ merchants.depositNotificationWithCurrency.body = 請付人民幣 {0} 在錢包 {
     CONSTRUCTION <br> \
     ANTON MAZNYI <br> \
     6217000010079289347
-merchants.depositNotificationWithCurrencyCNY.body = Silahkan membayar {0} ke akun {1} <br> \
-  ICBC <br> \
-  ???????????????20???????<br>\
-  ICBC ANTON MAZNYI<br>\
-  6212260200108499001<br>\
-  or China construction Bank<br>\
-  ???????????????93?<br>\
-  CONSTRUCTION <br> \
-  ANTON MAZNYI <br> \
-  6217000010079289347
-merchants.depositNotificationWithCurrencyIDR.body = Silahkan membayar {0} ke akun {1} <br> \
+merchants.depositNotificationWithCurrencyCNY.body =  請付人民幣 {0} 在錢包 {1} <br> \
+    帐号：110923954410401, <br> \
+    开户行：招商银行北京东直门支行
+merchants.depositNotificationWithCurrencyIDR.body = 請付人民幣 {0} 在錢包 {1} <br> \
     1. Bank danamon <br> \
     2. name  i nyoman mardana<br>\
     3. Schet 3600851194
-merchants.depositNotificationWithCurrencyTHB.body = Please pay {0} on the wallet {1} <br> \
+merchants.depositNotificationWithCurrencyTHB.body = 請付人民幣 {0} 在錢包 {1} <br> \
     Kasikorn bank <br> \
     015-1-65751-6
 dashboard.personalArea = 私人办公室
