--- a/Controller/src/main/resources/messages_ru.properties
+++ b/Controller/src/main/resources/messages_ru.properties
@@ -194,15 +194,8 @@ merchants.pendingEnrollment=Зачисление средств приозойд
 merchants.depositNotification.body = Пожалуйста, оплатите {0} на кошелек {1}
 #not translated
 merchants.depositNotificationWithCurrencyCNY.body = Пожалуйста, оплатите {0} на расчетный счет {1} <br> \
-  ICBC <br> \
-  中国北京市朝阳区朝阳门外市场街20号中保大厦首层<br>\
-  ICBC ANTON MAZNYI<br>\
-  6212260200108499001<br>\
-  or China construction Bank<br>\
-  中国北京市朝阳区朝外大街头条甲93号<br>\
-  CONSTRUCTION <br> \
-  ANTON MAZNYI <br> \
-  6217000010079289347
+    帐号：110923954410401, <br> \
+    开户行：招商银行北京东直门支行
 merchants.depositNotificationWithCurrencyIDR.body = Пожалуйста, оплатите {0} на расчетный счет {1} <br> \
     1. Bank danamon <br> \
     2. name  i nyoman mardana<br>\
