fix users wallets summary, added total input-output amount

--- a/Controller/src/main/resources/messages_en.properties
+++ b/Controller/src/main/resources/messages_en.properties
@@ -230,6 +230,8 @@ mywallets.createorder=create order
 mywallets.input=Refill
 mywallets.output=Output
 mywallets.rbalance=Reserved
+wallets.totalInputAmount=Total input amount
+wallets.totalOutputAmount=Total output amount
 orders=buy orders
 orders.accept=Accept
 orders.amountbuy=sum
