--- a/Controller/src/main/resources/messages_ru.properties
+++ b/Controller/src/main/resources/messages_ru.properties
@@ -470,6 +470,8 @@ wallets.abalance=Активный баланс
 wallets.rbalance=Зарезервировано
 wallets.average=В среднем на счет
 wallets.download=Выгрузить данные
+wallets.totalInputAmount=Итого ввели
+wallets.totalOutputAmount=Итого вывели
 orders.volume=Объем
 chart.candle=Свечи
 chart.area=Линия
