--- a/Controller/src/main/resources/messages_th.properties
+++ b/Controller/src/main/resources/messages_th.properties
@@ -588,3 +588,6 @@ orderinfo.ok=Ok
 admin.changePasswordTitle=Changing the passwords
 currency.search=Search
 session.expire=The session has expired. You need to log in again.
+
+wallets.totalInputAmount=Total input amount
+wallets.totalOutputAmount=Total output amount
