--- a/Controller/src/main/resources/messages_ar.properties
+++ b/Controller/src/main/resources/messages_ar.properties
@@ -860,3 +860,6 @@ Exrates للتأكد من كيفية استعمال الموقع cookie الشر
 orders.walletNotFound=Wallet not found
 orders.walletUpdateError=Error while transferring costs between orders
 orders.companyWalletNotFound=Company wallet not found
+
+wallets.totalInputAmount=Total input amount
+wallets.totalOutputAmount=Total output amount
