--- a/Controller/src/main/resources/messages_cn.properties
+++ b/Controller/src/main/resources/messages_cn.properties
@@ -652,3 +652,6 @@ dashboard.privacyContent=<div class='grayText'><strong>We respect your privacy a
 orders.walletNotFound=Wallet not found
 orders.walletUpdateError=Error while transferring costs between orders
 orders.companyWalletNotFound=Company wallet not found
+
+wallets.totalInputAmount=Total input amount
+wallets.totalOutputAmount=Total output amount
