--- a/Controller/src/main/resources/messages_in.properties
+++ b/Controller/src/main/resources/messages_in.properties
@@ -678,3 +678,6 @@ user.browse=Browse...
 orders.walletNotFound=Wallet not found
 orders.walletUpdateError=Error while transferring costs between orders
 orders.companyWalletNotFound=Company wallet not found
+
+wallets.totalInputAmount=Total input amount
+wallets.totalOutputAmount=Total output amount
