add confirm modal

--- a/Controller/src/main/resources/messages_ru.properties
+++ b/Controller/src/main/resources/messages_ru.properties
@@ -668,3 +668,6 @@ orders.companyWalletNotFound=Кошелёк компании не найден
 admin.sessionControl=Контроль сессий
 admin.sessionControl.sessionId=ID сессии
 admin.sessionControl.action=Действие
+admin.sessionControl.modalTitle=Прервать сессию
+admin.sessionControl.prompt=Вы уверены, что хотите прервать выбранную сессию?
+admin.sessionControl.submit=Прервать
