--- a/Controller/src/main/resources/messages_ar.properties
+++ b/Controller/src/main/resources/messages_ar.properties
@@ -866,3 +866,6 @@ wallets.totalOutputAmount=Total output amount
 admin.sessionControl=Session control
 admin.sessionControl.sessionId=Session ID
 admin.sessionControl.action=Action
+admin.sessionControl.modalTitle=Expire session
+admin.sessionControl.prompt=Are you sure you want to expire this session?
+admin.sessionControl.submit=Expire
