--- a/Controller/src/main/resources/messages_en.properties
+++ b/Controller/src/main/resources/messages_en.properties
@@ -596,3 +596,6 @@ orders.companyWalletNotFound=Company wallet not found
 admin.sessionControl=Session control
 admin.sessionControl.sessionId=Session ID
 admin.sessionControl.action=Action
+admin.sessionControl.modalTitle=Expire session
+admin.sessionControl.prompt=Are you sure you want to expire this session?
+admin.sessionControl.submit=Expire
