added downloads userWalletSummaryInOut

--- a/Controller/src/main/resources/messages_cn.properties
+++ b/Controller/src/main/resources/messages_cn.properties
@@ -655,3 +655,4 @@ orders.companyWalletNotFound=Company wallet not found
 
 wallets.totalInputAmount=Total input amount
 wallets.totalOutputAmount=Total output amount
+wallets.downloadInputOutput=Download input-output
