--- a/Controller/src/main/resources/messages_en.properties
+++ b/Controller/src/main/resources/messages_en.properties
@@ -232,6 +232,7 @@ mywallets.output=Output
 mywallets.rbalance=Reserved
 wallets.totalInputAmount=Total input amount
 wallets.totalOutputAmount=Total output amount
+wallets.downloadInputOutput=Download input-output
 orders=buy orders
 orders.accept=Accept
 orders.amountbuy=sum
