--- a/Controller/src/main/resources/messages_ru.properties
+++ b/Controller/src/main/resources/messages_ru.properties
@@ -472,6 +472,7 @@ wallets.average=В среднем на счет
 wallets.download=Выгрузить данные
 wallets.totalInputAmount=Итого ввели
 wallets.totalOutputAmount=Итого вывели
+wallets.downloadInputOutput=Выгрузить ввод-вывод
 orders.volume=Объем
 chart.candle=Свечи
 chart.area=Линия
