--- a/Controller/src/main/resources/messages_th.properties
+++ b/Controller/src/main/resources/messages_th.properties
@@ -591,3 +591,4 @@ session.expire=The session has expired. You need to log in again.
 
 wallets.totalInputAmount=Total input amount
 wallets.totalOutputAmount=Total output amount
+wallets.downloadInputOutput=Download input-output
